# MCPChatbotForPapers

./: README.md  mcp_chatbot.py  pyproject.toml  requirements.txt  research_server.py  results.txt  tools.py
Archives/: backup.txt
papers/ai_agents/: papers_info.json
papers/algebra/: papers_info.json
papers/bones/: papers_info.json
papers/cybersecurity_ai/: papers_info.json
papers/databases/: papers_info.json
papers/generative_ai/: papers_info.json
papers/homeopathy/: papers_info.json
papers/machine_learning/: papers_info.json
papers/quantum_computing/: papers_info.json
papers/water_cycle/: papers_info.json
